--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -92,26 +92,24 @@
 
         </div>
     </div>
-    <div class="table-settings mb-4">
+   <div class="table-settings mb-4">
         <form method="post" asp-page-handler="Search" class="row align-items-center">
 
-            <div class="row">
+        <div class="row">
 
-                <div class="col col-md-6 col-lg-3 mb-3">
-                    <div class="input-group me-2 me-lg-3 fmxw-400">
-                        <span class="input-group-text">
-                            <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
-                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                        </span>
-                        <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName"
-                            value="@Model.ItemName">
+                    <div class="col col-md-6 col-lg-3 mb-3">
+                        <div class="input-group me-2 me-lg-3 fmxw-400">
+                            <span class="input-group-text">
+                                <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                          d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                                          clip-rule="evenodd"></path>
+                                </svg>
+                            </span>
+                            <input type="text" name="ItemName" class="form-control" placeholder="@Model.lblItemName"  value="@Model.ItemName">
+                        </div>
                     </div>
-
                                 <div class="col col-md-6 col-lg-3 mb-3">
                                     <div class="input-group me-2 me-lg-3 fmxw-400">
                                         <span class="input-group-text">
@@ -148,18 +146,16 @@
         </div>
         <div class="row">
 
-
-                <div class="col-4 col-md-2 ps-md-0  mx-3">
-                    <button type="submit" class="btn btn-primary">@Model.lblSubmit</button>
-                </div>
-            </div>
+                    <div class="col-4 col-md-2 ps-md-0  mx-3">
+                        <button type="submit" class="btn btn-primary">@Model.lblSubmit</button>
+                    </div>
+        </div>
 
 
         </form>
     </div>
-    <div class="d-flex justify-content-between mb-3 align-items-center">
+    <div class="d-flex justify-content-end mb-3 align-items-center">
 
-        <div>@Model.lblTotalItem : @Model.TotalItems</div>
 
 
         <div class="d-flex">
@@ -174,6 +170,93 @@
                 <button type="submit" asp-page-handler="LoadSampleFile"
                     class="btn btn-secondary  top-big-btn">@Model.lblDonwloadSampleFile</button>
             </form>
+        </div>
+
+    </div>
+
+    <div class="d-flex align-items-center justify-content-between">
+        <div>@Model.lblTotalItem : @Model.TotalItems</div>
+        <div>
+             @if (Model.TotalPages > 1)
+    {
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+
+                @* Previous button *@
+                @if (Model.CurrentPage > 1)
+                {
+
+                    <li class="page-item">
+                        <a class="page-link"
+                            href="?page=@(Model.CurrentPage - 1)&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">&laquo;</a>
+                    </li>
+                }
+
+                @* Show pages normally if the total pages are less than or equal to 10 *@
+                @if (Model.TotalPages <= 10)
+                {
+                    @for (int i = 1; i <= Model.TotalPages; i++)
+                    {
+                        <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                            <a class="page-link"
+                                href="?page=@i&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@i</a>
+                        </li>
+                    }
+                }
+                else
+                {
+                    @* Show the first page, then ellipsis if there are skipped pages *@
+                    @if (Model.CurrentPage > 3)
+                    {
+                        <li class="page-item">
+                            <a class="page-link"
+                                href="?page=1&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">1</a>
+                        </li>
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    }
+
+                    @* Show pages from (current-1) to (current+1) *@
+                    @for (int i = Math.Max(1, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages, Model.CurrentPage + 1); i++)
+                    {
+                        <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                            <a class="page-link"
+                                href="?page=@i&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@i</a>
+                        </li>
+                    }
+
+                    @* Add "..." if there are skipped pages after the current page *@
+                    @if (Model.CurrentPage < Model.TotalPages - 1)
+                    {
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    }
+
+                    @* Show the last page, if it's not already visible *@
+                    @if (Model.CurrentPage < Model.TotalPages - 2)
+                    {
+                        <li class="page-item">
+                            <a class="page-link"
+                                href="?page=@Model.TotalPages&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@Model.TotalPages</a>
+                        </li>
+                    }
+                }
+
+                @* Last buttons *@
+                @if (Model.CurrentPage < Model.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link"
+                            href="?page=@(Model.CurrentPage + 1)&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">&raquo;</a>
+                    </li>
+
+                }
+
+            </ul>
+        </nav>
+    }
         </div>
 
     </div>
@@ -320,144 +403,6 @@
 
 }
 
-<div class="card border-0 shadow mb-4">
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-centered table-nowrap mb-0 rounded">
-                <thead class="thead-light">
-                    <tr>
-                        <th scope="col" class="border-0 rounded-start">@Model.lblItemCode</th>
-                        <th scope="col" class="border-0">@Model.lblItemName</th>
-                        <th scope="col" class="border-0">@Model.lblAvailableQuantity</th>
-                        <th scope="col" class="border-0">@Model.lblHazardType</th>
-                        <th scope="col" class="border-0">@Model.lblTypeName</th>
-                        <th scope="col" class="border-0">@Model.lblUnitCode</th>
-                        <th scope="col" class="border-0">@Model.lblGroupName</th>
-                        <th scope="col" class="border-0">@Model.lblBatchNo</th>
-                        <th scope="col" class="border-0">@Model.lblExpiryDate</th>
-
-                        <th class="border-0 rounded-end"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Items != null)
-                    {
-                        foreach (var item in Model.Items)
-                        {
-                            <tr>
-                                <th scope="row">@item.ItemCode</th>
-                                <td>@item.ItemName</td>
-                                <td>@item.AvailableQuantity</td>
-                                <td style='color: @(item.IsHazardous ? "red" : "teal")'>@item.HazardTypeName</td>
-                                <td>@item.TypeName</td>
-                                <td>@item.UnitCode</td>
-                                <td>@item.GroupDesc</td>
-                                <td>@item.BatchNo</td>
-                                <td>@item.ExpiryDate</td>
-                                <td>
-                                    <form method="post">
-                                        <input type="hidden" value="@item.ItemId" name="ItemId" />
-                                        <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
-                                            asp-page-handler="Edit" />
-                                        <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
-                                            asp-page-handler="Delete" />
-                                        <!--<input type="submit" value="@Model.lblDamage" class="btn btn-danger" asp-page-handler="Damage" formaction="DamageItem?ItemId=@item.ItemId" /> -->
-                                        <a class="btn btn-danger" href="DamageItem?id=@item.ItemId">@Model.lblDamage </a>
-                                    </form>
-                                </td>
-                            </tr>
-                        }
-                    }
 
 
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
 
-@* <div style="color:maroon; text-align:center">@Model.Message</div> *@
-
-
-@if (Model.TotalPages > 1)
-{
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-
-            @* Previous button *@
-            @if (Model.CurrentPage > 1)
-            {
-
-                <li class="page-item">
-                    <a class="page-link"
-                        href="?page=@(Model.CurrentPage - 1)&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">&laquo;</a>
-                </li>
-            }
-
-            @* Show pages normally if the total pages are less than or equal to 10 *@
-            @if (Model.TotalPages <= 10)
-            {
-                @for (int i = 1; i <= Model.TotalPages; i++)
-                {
-                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                        <a class="page-link"
-                            href="?page=@i&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@i</a>
-                    </li>
-                }
-            }
-            else
-            {
-                @* Show the first page, then ellipsis if there are skipped pages *@
-                @if (Model.CurrentPage > 3)
-                {
-                    <li class="page-item">
-                        <a class="page-link"
-                            href="?page=1&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">1</a>
-                    </li>
-                    <li class="page-item disabled">
-                        <span class="page-link">...</span>
-                    </li>
-                }
-
-                @* Show pages from (current-1) to (current+1) *@
-                @for (int i = Math.Max(1, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages, Model.CurrentPage + 1); i++)
-                {
-                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                        <a class="page-link"
-                            href="?page=@i&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@i</a>
-                    </li>
-                }
-
-                @* Add "..." if there are skipped pages after the current page *@
-                @if (Model.CurrentPage < Model.TotalPages - 1)
-                {
-                    <li class="page-item disabled">
-                        <span class="page-link">...</span>
-                    </li>
-                }
-
-                @* Show the last page, if it's not already visible *@
-                @if (Model.CurrentPage < Model.TotalPages - 2)
-                {
-                    <li class="page-item">
-                        <a class="page-link"
-                            href="?page=@Model.TotalPages&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">@Model.TotalPages</a>
-                    </li>
-                }
-            }
-
-            @* Last buttons *@
-            @if (Model.CurrentPage < Model.TotalPages)
-            {
-                <li class="page-item">
-                    <a class="page-link"
-                        href="?page=@(Model.CurrentPage + 1)&ItemName=@Model.ItemName&Group=@Model.Group&FromDate=@Model.FromDate?.ToString("yyyy-MM-dd")&ToDate=@Model.ToDate?.ToString("yyyy-MM-dd")">&raquo;</a>
-                </li>
-
-            }
-
-        </ul>
-    </nav>
-}
-
-}
