--- a/Pages/viewMaterialDispensing.cshtml
+++ b/Pages/viewMaterialDispensing.cshtml
@@ -15,6 +15,7 @@
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/expenses.png" alt="Home" width="16" height="16" class="me-2" />
                             <a href="/Disbursements" class="text-decoration-none"> @Model.lblDisbursements</a>
+                            <a href="/Disbursements?page=@Model.page&RequesterName=@Model.RequesterName&FromDate=@Model.FromDate&ToDate=@Model.ToDate" class="text-decoration-none"> @Model.lblDisbursements</a>
                         </li>
                         <li class="breadcrumb-item d-flex align-items-center active" aria-current="page">
                             <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
