--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -166,6 +166,14 @@
                         <td>
                             <form method="post">
                                 <input type="hidden" value="@item.DisbursementRequestId" name="DisbursementID" />
+
+                                <!-- Variables for Breadcrumb Starts -->
+                                <input type="hidden" value="@Model.CurrentPage" name="page" />
+                                <input type="hidden" value="@Model.RequesterName" name="RequesterName" />
+                                <input type="hidden" value="@Model.FromDate" name="FromDate" />
+                                <input type="hidden" value="@Model.ToDate" name="ToDate" />
+                                <!-- Variables for Breadcrumb Ends -->
+
                                 <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
                                 <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
                             </form>
