--- a/Pages/AddStore.cshtml
+++ b/Pages/AddStore.cshtml
@@ -75,6 +75,28 @@
 
 
                         <div class="col-lg-12 col-sm-12">
+                            @* Warehouse type  *@
+                            <div class="mb-4">
+                                    <label class="my-1 me-2" for="WarehouseType">@Model.lblWarehouseType</label>
+                                    <select class="form-select" id="WarehouseType" name="WarehouseType"
+                                        aria-label="Default select example">
+                                        <option value="Central">Central</option>
+                                        <option value="Branch">Branch</option>
+                                        <option value="SupplyRoom">Supply Room</option>
+                                        <option value="EmergencyRoom">Emergency Room</option>
+
+
+                                    </select>
+                            </div>
+
+                            @* Warehouse Name  *@
+                            <div class="mb-4">
+                                <label for="storeName">@Model.lblStoreName</label>
+                                <input type="text" name="StoreName" value="@Model.StoreName" class="form-control"
+                                    id="storeName">    
+                            </div>
+
+
                             <div class="mb-4">
                                 <label for="storeNumber">@Model.lblStoreNumber</label>
                                 <input type="text" name="StoreNumber" class="form-control" id="storeNumber"
@@ -82,12 +104,50 @@
 
                                 
                             </div>
+                           
+                            @* Warehouse manager name  *@
                             <div class="mb-4">
-                                <label for="storeName">@Model.lblStoreName</label>
-                                <input type="text" name="StoreName" value="@Model.StoreName" class="form-control"
-                                    id="storeName">
-                                
+                                    <label class="my-1 me-2" for="ManagerName">@Model.lblManagerName</label>
+                                    <select class="form-select" id="ManagerName" name="ManagerName"
+                                        aria-label="Default select example">
+                                        <option value=""></option>
+                                        
+
+
+                                    </select>
                             </div>
+
+                            @* Warehouse manager Job Number  *@
+                            <div class="mb-4">
+                                <label for="storeNumber">@Model.lblManagerJobNumber</label>
+                                <input type="text" name="ManagerJobNumber" class="form-control" id="ManagerJobNumber"
+                                    value="@Model.ManagerJobNumber" /> 
+                            </div>
+
+                            @* Warehouse status *@
+                           <div class="mb-4">
+                                <p>@Model.lblStatus</p>
+
+                                <div class="form-check">
+                                    <input id="Open" class="form-check-input" type="radio" name="Status" value="Open" 
+                                        checked="@Model.Status == "Open"" />
+                                    <label class="form-check-label" for="Open">
+                                        @Model.lblOpen
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input id="Closed" class="form-check-input" type="radio" name="Status" value="Closed"
+                                        checked="@Model.Status == "Closed"" />
+                                    <label class="form-check-label" for="Closed">
+                                        @Model.lblClosed
+                                    </label>
+                                </div>
+                            </div>
+
+
+
+
                             <div class="mb-4">
 
 
