--- a/Pages/AddUser.cshtml
+++ b/Pages/AddUser.cshtml
@@ -6,20 +6,28 @@
         if (document.getElementById("IsADUser").checked == true) {
             document.getElementById("Password").disabled = true;
             document.getElementById("PasswordRow").style = 'display:none;';
+            document.getElementById("ReTypePassword").disabled = true;
+            document.getElementById("ReTypePasswordRow").style = 'display:none;';
         }
         else {
             document.getElementById("Password").disabled = false;
             document.getElementById("PasswordRow").style = 'display:block;';
+            document.getElementById("ReTypePassword").disabled = false;
+            document.getElementById("ReTypePasswordRow").style = 'display:block;';
         }
         $("#IsADUser").change(function () {
 
             if (document.getElementById("IsADUser").checked == true) {
                 document.getElementById("Password").disabled = true;
                 document.getElementById("PasswordRow").style = 'display:none;';
+                 document.getElementById("ReTypePassword").disabled = true;
+                document.getElementById("ReTypePasswordRow").style = 'display:none;';
             }
             else {
                 document.getElementById("Password").disabled = false;
                 document.getElementById("PasswordRow").style = 'display:block;';
+                document.getElementById("ReTypePassword").disabled = false;
+                document.getElementById("ReTypePasswordRow").style = 'display:block;';
             }
 
         });
@@ -94,9 +102,42 @@
             <div class="card border-0 shadow components-section">
                 <form method="post" class="card-body">
                     <div class="row mb-4">
+                        @* User type  *@
+                        <div class="mb-4">
+                                <label class="my-1 me-2" for="UserGroupID">@Model.lblUserGroupName</label>
+                                <select class="form-select" id="UserGroupID" name="UserGroupID"
+                                    aria-label="Default select example" >
 
+                                    @if (Model.UserGroupsList != null)
+                                    {
+                                        foreach (var item in Model.UserGroupsList)
+                                        {
+                                            <option value="@item.UserGroupId">@item.UserGroupName</option>
+                                        }
+                                    }
+                                </select>
+                        </div>
 
+                        @* is domain User  *@
+                        <div class="mb-4">
+                            <div class="form-check">
+                                <label class="form-check-label" for="IsADUser">
+                                    @Model.lblIsDomainUser
+                                </label>
+                                <input id="IsADUser" class="form-check-input" type="checkbox" name="IsADUser"
+                                asp-for="IsADUser">
+
+                             </div>
+                        </div>
                         <div class="col-lg-12 col-sm-12">
+                            @* Job Number  *@
+                            <div class="mb-4">
+                                <label for="JobNumber">@Model.lblJobNumber</label>
+
+                                <input type="text" class="form-control" id="JobNumber" name="JobNumber"
+                                    value="@Model.JobNumber" />
+
+                            </div>
                             <div class="mb-4">
                                 <label for="Username">@Model.lblUserName</label>
 
@@ -111,6 +152,25 @@
                                     value="@Model.UserFullName" />
 
                             </div>
+
+                            @* Employee's Affiliation  *@
+                            <div class="mb-4">
+                                <label for="EmpAffiliation">@Model.lblEmpAffiliation</label>
+
+                                <input type="text" class="form-control" id="EmpAffiliation" name="EmpAffiliation"
+                                    value="@Model.EmpAffiliation" />
+
+                            </div>
+
+                            @* Transfer  *@
+                            <div class="mb-4">
+                                <label for="Transfer">@Model.lblTransfer</label>
+
+                                <input type="text" class="form-control" id="Transfer" name="Transfer"
+                                    value="@Model.Transfer" />
+
+                            </div>
+
                             <div class="mb-4">
                                 <label for="Email">@Model.lblEmail</label>
 
@@ -119,36 +179,22 @@
                             </div>
 
 
-                            <div class="mb-4">
-                                <label class="my-1 me-2" for="UserGroupID">@Model.lblUserGroupName</label>
-                                <select class="form-select" id="UserGroupID" name="UserGroupID"
-                                    aria-label="Default select example">
-
-                                    @if (Model.UserGroupsList != null)
-                                    {
-                                        foreach (var item in Model.UserGroupsList)
-                                        {
-                                            <option value="@item.UserGroupId">@item.UserGroupName</option>
-                                        }
-                                    }
-                                </select>
-                            </div>
-                            <div class="mb-4">
-                                <div class="form-check">
-                                    <label class="form-check-label" for="IsADUser">
-                                        @Model.lblIsDomainUser
-                                    </label>
-                                    <input id="IsADUser" class="form-check-input" type="checkbox" name="IsADUser"
-                                        asp-for="IsADUser">
-
-                                </div>
-                            </div>
+                          
+                            
 
 
                             <div class="mb-4" id="PasswordRow">
                                 <label for="Password">@Model.lblPassword</label>
                                 <input type="password" name="Password" value="@Model.Password" class="form-control"
                                     id="Password">
+
+                            </div>
+
+                            @* re type password  *@
+                            <div class="mb-4" id="ReTypePasswordRow">
+                                <label for="ReTypePassword">@Model.lblReTypePassword</label>
+                                <input type="password" name="ReTypePassword" value="@Model.ReTypePassword" class="form-control"
+                                    id="ReTypePassword">
 
                             </div>
 
